[GTK] Menu list button doesn't use the text color from the theme https://bugs.webkit.org/show_bug.cgi?id=118234

Reviewed by Darin Adler.

.:

* ManualTests/gtk/theme.html: Add a disabled combo test.

Source/WebCore:

Set the combo box color accroding to the theme when adjusting the menu list style like Mac port does.

* rendering/RenderThemeGtk.cpp:
(WebCore::menuListColor):
(WebCore::RenderThemeGtk::adjustMenuListStyle):

Canonical link: https://commits.webkit.org/174794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199659 268f45cc-cd09-0410-ab3c-d52691b4dbfc